[package]
name = "langquiz_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tap = "1.0.1"
itertools = "0.14.0"
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.16"
clap = { version = "4.5.47", features = ["cargo"] }
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }
dotenvy = "0.15"
chrono = "0.4.42"
rand = "0.9.2"
